--- a/main/templates/main/index.html
+++ b/main/templates/main/index.html
@@ -1,4 +1,9 @@
 {% extends 'main/base.html' %}
+{% load static %}
+{% block style %}
+    <link rel="stylesheet" href="{% static 'css/style.css' %}">
+    <link rel="stylesheet" href="{% static 'css/styleguide.css' %}">
+{% endblock %}
 {% block script %}
     <script type="text/babel">
         function getCSRFToken() {
