--- a/main/static/css/style.css
+++ b/main/static/css/style.css
@@ -521,3 +521,57 @@ input {
 .cursor {
   cursor: pointer;
 }
+
+.box {
+  height: 88px;
+  width: 88px;
+}
+
+.box .group {
+  background-color: var(--green);
+  border-radius: 44px;
+  box-shadow: var(--);
+  height: 88px;
+  left: 0;
+  position: fixed;
+  top: 0;
+  width: 88px;
+}
+
+.box .overlap-group-wrapper {
+  height: 53px;
+  left: 17px;
+  position: relative;
+  top: 17px;
+  width: 53px;
+}
+
+.box .overlap-group {
+  height: 53px;
+  position: relative;
+}
+
+.box .rectangle {
+  background-color: var(--white);
+  border-radius: 5px;
+  height: 53px;
+  left: 23px;
+  position: absolute;
+  top: 0;
+  width: 7px;
+}
+
+.box .div {
+  background-color: var(--white);
+  border-radius: 5px;
+  height: 53px;
+  left: 23px;
+  position: absolute;
+  top: 0;
+  transform: rotate(90deg);
+  width: 7px;
+}
+
+html, body, #map {
+  width: 100%; height: 90%; padding: 0; margin: 0;
+}
