--- a/main/templates/main/profile.html
+++ b/main/templates/main/profile.html
@@ -1,12 +1,35 @@
 {% extends 'main/base.html' %}
+{% load static %}
+{% block style %}
+    <link rel="stylesheet" href="{% static 'css/style.css' %}">
+    <link rel="stylesheet" href="{% static 'css/profile_style.css' %}">
+    <link rel="stylesheet" href="{% static 'css/styleguide.css' %}">
+{% endblock %}
 {% block script %}
     <script type="text/babel">
-        function App() {
-            return <h1>{{ user }}</h1>;
-        }
+        const Screen = () => {
+          return (
+            <div className="screen">
+              <div className="div-2">
+
+              </div>
+                <Plus/>
+            </div>
+          );
+        };
+
+        const Plus = () => {
+          return (
+              <div id="outer-plus">
+                  <a href="/add">
+                      <img id="inner-plus" className="cursor" src="{% static 'images/Subtract.svg' %}" width="88" alt="plus"/>
+                  </a>
+                </div>
+          );
+        };
 
         const root = document.getElementById('root');
         let DOMRoot = ReactDOM.createRoot(root);
-        DOMRoot.render(<App />);
+        DOMRoot.render(<Screen />);
     </script>
 {% endblock %}
