--- a/main/static/css/styleguide.css
+++ b/main/static/css/styleguide.css
@@ -1,38 +1,38 @@
 :root {
   --: 0px 4px 14px 0px rgba(51, 51, 51, 0.5);
   --black: rgba(19, 19, 21, 1);
-  --body-large-font-family: "Saira-Regular", Helvetica;
+  --body-large-font-family: "Nunito-Medium", Helvetica;
   --body-large-font-size: 16px;
   --body-large-font-style: normal;
   --body-large-font-weight: 400;
   --body-large-letter-spacing: 0.5px;
   --body-large-line-height: 24px;
-  --body-medium-font-family: "Saira-Regular", Helvetica;
+  --body-medium-font-family: "Nunito-Medium", Helvetica;
   --body-medium-font-size: 14px;
   --body-medium-font-style: normal;
   --body-medium-font-weight: 400;
   --body-medium-letter-spacing: 0.25px;
   --body-medium-line-height: 20px;
-  --body-small-font-family: "Saira-Regular", Helvetica;
+  --body-small-font-family: "Nunito-Medium", Helvetica;
   --body-small-font-size: 12px;
   --body-small-font-style: normal;
   --body-small-font-weight: 400;
   --body-small-letter-spacing: 0px;
   --body-small-line-height: 16px;
   --dark-pink: rgba(180, 80, 162, 1);
-  --display-large-font-family: "SairaSemiCondensed-Regular", Helvetica;
+  --display-large-font-family: "Nunito-Medium", Helvetica;
   --display-large-font-size: 57px;
   --display-large-font-style: normal;
   --display-large-font-weight: 400;
   --display-large-letter-spacing: -0.25px;
   --display-large-line-height: 64px;
-  --display-medium-font-family: "SairaSemiCondensed-Regular", Helvetica;
+  --display-medium-font-family: "Nunito-Medium", Helvetica;
   --display-medium-font-size: 45px;
   --display-medium-font-style: normal;
   --display-medium-font-weight: 400;
   --display-medium-letter-spacing: 0px;
   --display-medium-line-height: 52px;
-  --display-small-font-family: "SairaSemiCondensed-Regular", Helvetica;
+  --display-small-font-family: "Nunito-Medium", Helvetica;
   --display-small-font-size: 36px;
   --display-small-font-style: normal;
   --display-small-font-weight: 400;
@@ -40,31 +40,31 @@
   --display-small-line-height: 44px;
   --gray: rgba(84, 79, 99, 1);
   --green: rgba(70, 136, 150, 1);
-  --headline-large-font-family: "SairaSemiCondensed-Regular", Helvetica;
+  --headline-large-font-family: "Nunito-Medium", Helvetica;
   --headline-large-font-size: 32px;
   --headline-large-font-style: normal;
   --headline-large-font-weight: 400;
-  --headline-large-letter-spacing: 0px;
+  --headline-large-letter-spacing: 0.5px;
   --headline-large-line-height: 40px;
-  --headline-medium-font-family: "SairaSemiCondensed-Regular", Helvetica;
+  --headline-medium-font-family: "Nunito-Medium", Helvetica;
   --headline-medium-font-size: 28px;
   --headline-medium-font-style: normal;
   --headline-medium-font-weight: 400;
   --headline-medium-letter-spacing: 0px;
   --headline-medium-line-height: 36px;
-  --headline-small-font-family: "SairaSemiCondensed-Regular", Helvetica;
+  --headline-small-font-family: "Nunito-Medium", Helvetica;
   --headline-small-font-size: 24px;
   --headline-small-font-style: normal;
   --headline-small-font-weight: 400;
   --headline-small-letter-spacing: 0px;
   --headline-small-line-height: 32px;
-  --label-large-font-family: "Saira-Medium", Helvetica;
+  --label-large-font-family: "Nunito-Medium", Helvetica;
   --label-large-font-size: 14px;
   --label-large-font-style: normal;
   --label-large-font-weight: 500;
   --label-large-letter-spacing: 0.10000000149011612px;
   --label-large-line-height: 20px;
-  --label-small-font-family: "Saira-Medium", Helvetica;
+  --label-small-font-family: "Nunito-Medium", Helvetica;
   --label-small-font-size: 11px;
   --label-small-font-style: normal;
   --label-small-font-weight: 500;
@@ -109,4 +109,7 @@
   --title-small-letter-spacing: 0.10000000149011612px;
   --title-small-line-height: 20px;
   --white: rgba(239, 239, 239, 1);
+  --Gray: #544F63;
+  --Light-purple: #D0BCFF;
+  --Black: #131315
 }
