--- a/main/static/css/profile_style.css
+++ b/main/static/css/profile_style.css
@@ -1,11 +1,11 @@
 #outer-plus {
-  width: 95vw;
-  height: 95vh;
-  position: relative;
+  bottom: 0;
+  right: 0;
+  position: fixed;
 }
 
 #inner-plus {
   position: absolute;
-  bottom: 0;
-  right: 0;
+  bottom: 50px;
+  right: 60px;
 }
