--- a/main/templates/main/index.html
+++ b/main/templates/main/index.html
@@ -1,150 +1,94 @@
 {% extends 'main/base.html' %}
 {% load static %}
-{% block style %}
-    <link rel="stylesheet" href="{% static 'css/style.css' %}">
-    <link rel="stylesheet" href="{% static 'css/styleguide.css' %}">
-{% endblock %}
 {% block script %}
     <script type="text/babel">
-        function getCSRFToken() {
-          const cookies = document.cookie.split(';');
-          for (let i = 0; i < cookies.length; i++) {
-            const cookie = cookies[i].trim();
-            if (cookie.startsWith('csrftoken=')) {
-              return cookie.substring('csrftoken='.length, cookie.length);
-            }
-          }
-          return null;
-        }
-
-        const csrftoken = getCSRFToken();
-
-        const CSRFToken = () => {
-            return (
-                <input type="hidden" name="csrfmiddlewaretoken" value={csrftoken} />
-            );
-        };
-
-        function App() {
-            return <button onClick={() => onEnterButtonClick("")}>Войти</button>;
-        }
-
-        function onEnterButtonClick(error) {
-            DOMRoot.render(<Form toRegister={false} error={error}/>);
-        }
-
-        function onRegisterButtonClick(error) {
-            DOMRoot.render(<Form toRegister={true} error={error}/>);
-        }
-
-        function Form({toRegister, error}) {
-            return (
-                <div className="screen">
-                  <form className="div" method="post"><CSRFToken />
-                    <div className="text-wrapper">{ toRegister ? "Регистрация" : "Вход"}</div>
-                    <p className="p">Для { toRegister ? "регистрации придумайте" : "входа в личный кабинет введите"} логин и пароль.</p>
-                    <div className="text-wrapper-2">Логин</div>
-                    <div className="text-wrapper-3">Пароль</div>
-                    <Button
-                      className={ toRegister ? "button-instance2" : "button-instance"}
-                      labelText={ toRegister ? "Зарегистрироваться" : "Войти"}
-                      labelTextClassName="design-component-instance-node"
-                      showIcon={false}
-                      style="filled"
-                    />
-                      {!toRegister && <div className="text-wrapper-4 cursor" onClick={() => onRegisterButtonClick("")}>Регистрация</div>}
-                    <input required maxLength="20" name="username" className="rectangle" />
-                    <input required maxLength="20" name="password" className="rectangle-2" type="password" />
-                      <input hidden name="toSignUp" type="text" value={toRegister}/>
-                      <span className="text-wrapper-5">{error}</span>
-                  </form>
-                </div>
-              );
-        }
-
-        const Button = ({ labelText = "Label", style, stateProp, showIcon, className }) => {
-          const [state, dispatch] = React.useReducer(reducer, {
-            style: style || "filled",
-            state: stateProp || "enabled",
-            showIcon: showIcon || false,
-          });
-
+        const Screen = () => {
           return (
-            <button
-                type="submit"
-              className={`button ${state.style} ${state.state} ${className}`}
-              onMouseEnter={() => {
-                dispatch("mouse_enter");
-              }}
-              onMouseLeave={() => {
-                dispatch("mouse_leave");
-              }}
-            >
-              <div className={`state-layer state-${state.state} style-${state.style} show-icon-${state.showIcon}`}>
-                {((state.showIcon && state.state === "disabled" && state.style === "elevated") ||
-                  (state.showIcon && state.state === "disabled" && state.style === "text") ||
-                  (state.showIcon && state.state === "disabled" && state.style === "tonal") ||
-                  (state.showIcon && state.state === "enabled") ||
-                  (state.showIcon && state.state === "focused") ||
-                  (state.showIcon && state.state === "hovered") ||
-                  (state.showIcon && state.state === "pressed")) && (
-                  <Add24Px
-                    className="instance-node"
-                    color={
-                      state.state === "disabled"
-                        ? "#1D1B20"
-                        : (state.state === "enabled" && state.style === "tonal") ||
-                          (state.state === "focused" && state.style === "tonal") ||
-                          (state.state === "hovered" && state.style === "tonal") ||
-                          (state.state === "pressed" && state.style === "tonal")
-                        ? "#1D192B"
-                        : state.style === "filled"
-                        ? "white"
-                        : "#6750A4"
-                    }
-                    opacity={state.state === "disabled" ? "0.38" : undefined}
-                  />
-                )}
-
-                {state.showIcon && state.state === "disabled" && ["filled", "outlined"].includes(state.style) && (
-                  <Icon className="instance-node" />
-                )}
-
-                <div className="label-text">{labelText}</div>
+              <div>
+                  <header>
+                      <div className="header-container">
+                          <div><a href="/"><img className="header-mobile" src="{% static 'images/Logo.svg' %}" alt="Logo"/></a></div>
+                          <div><a className="header-mobile" href="/logout">Выйти</a></div>
+                      </div>
+                  </header>
+                  <Cards/>
+                  <Plus/>
               </div>
-            </button>
           );
         };
 
-        function reducer(state, action) {
-          switch (action) {
-            case "mouse_enter":
-              return {
-                ...state,
-                state: "hovered",
-              };
-
-            case "mouse_leave":
-              return {
-                ...state,
-                state: "enabled",
-              };
-          }
-
-          return state;
+        const Cards = () => {
+            return (
+                <div className="list">
+                {% for order in orders %}
+                    {% if order.is_cancelled %}
+                        <div className="card card-cancelled">
+                            <div className="circle circle-cancelled">
+                                <img src="{% static 'images/Ellipse red.svg' %}" alt="circle"/>
+                            </div>
+                            <div>
+                                <p className="order-name">{{ order }} ({{ order.id }})</p>
+                                <p className="order-action">Отклонено</p>
+                            </div>
+                            <div className="date">
+                                <p>{{ order.date.date|date:'d.m.Y' }}</p>
+                            </div>
+                            <div className="line">
+                                <img src="{% static 'images/Line 1.png' %}" alt="line"/>
+                            </div>
+                        </div>
+                    {% else %}
+                        {% if order.date.timestamp < current_time.timestamp %}
+                            <div className="card card-success">
+                                <div className="circle circle-success">
+                                    <img src="{% static 'images/Ellipse green.svg' %}" alt="circle"/>
+                                </div>
+                                <div>
+                                    <p className="order-name">{{ order }} ({{ order.id }})</p>
+                                    <p className="order-action">Готово</p>
+                                </div>
+                                <div className="date">
+                                    <p>{{ order.date.date|date:'d.m.Y' }}</p>
+                                </div>
+                                <div className="line">
+                                    <img src="{% static 'images/Line 1.png' %}" alt="line"/>
+                                </div>
+                            </div>
+                        {% else %}
+                            <div className="card card-process">
+                                <div className="circle circle-process">
+                                    <img src="{% static 'images/Ellipse purple.svg' %}" alt="circle"/>
+                                </div>
+                                <div>
+                                    <p className="order-name">{{ order }} ({{ order.id }})</p>
+                                    <p className="order-action">Ожидает съёмки</p>
+                                </div>
+                                <div className="date">
+                                    <p>{{ order.date.date|date:'d.m.Y' }}</p>
+                                </div>
+                                <div className="line">
+                                    <img src="{% static 'images/Line 1.png' %}" alt="line"/>
+                                </div>
+                            </div>
+                        {% endif %}
+                    {% endif %}
+                {% endfor %}
+                </div>
+            );
         }
+
+        const Plus = () => {
+          return (
+              <div id="outer-plus">
+                  <a href="/add">
+                      <img id="inner-plus" className="cursor" src="{% static 'images/Subtract.svg' %}" width="88" alt="plus"/>
+                  </a>
+                </div>
+          );
+        };
 
         const root = document.getElementById('root');
         let DOMRoot = ReactDOM.createRoot(root);
-        {% if error_code == 1 %}
-            onEnterButtonClick('Логин и пароль не совпадают');
-            {% else %}
-            {% if error_code == 2 %}
-                onRegisterButtonClick('Пользователь уже существует');
-                {% else %}
-                DOMRoot.render(<App />);
-            {% endif %}
-        {% endif %}
-
+        DOMRoot.render(<Screen />);
     </script>
 {% endblock %}
