fix bugs with orders

--- a/main/templates/main/add.html
+++ b/main/templates/main/add.html
@@ -89,7 +89,7 @@
                               <div><a className="header-mobile" href="/logout">Выйти</a></div>
                           </div>
                         </header>
-                        <form method="post" action="/"><CSRFToken />
+                        <form method="post" action="/post/"><CSRFToken />
                             <div className="map-form">
                                 <div className="input-group-order">
                                     <div className="input-order-name">
